--- a/generic.html
+++ b/generic.html
@@ -5,6 +5,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<html lang="en"></html>
 	<head>
 		<title>Generic - Solid State by HTML5 UP</title>
 		<meta charset="utf-8" />
