--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+<html lang="en"></html>
 <html>
+	
 	<head>
 		<title>Solid State by HTML5 UP</title>
 		<meta charset="utf-8" />
@@ -19,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Home</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -31,10 +33,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a><!--<a href="generic.html"> for future expansion-->[under construction]</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -45,7 +44,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div> <!--<i class="fa fa-laptop" aria-hidden="true"></i>-->
 							<h2>Graham Bovett</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+							<p>Project Showcase</p>
 						</div>
 					</section>
 
