--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html>
 	
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<title>gbovett portfolio gitpages</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -57,7 +57,7 @@
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Jeopardy Applet</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<p>A Jeopardy-style trivia game developed for a computer science course.<br>Intended to demonstate implementation of general computing<br> concepts as well as a simple GUI. </p>
 										<a href="https://github.com/gbovett/JeopardyApplet" class="special">Project Download (redirects to github)</a>
 									</div>
 								</div>
@@ -68,8 +68,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">temp</h2>
+										<p>temp</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -80,8 +80,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">temp</h2>
+										<p>temp</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -90,37 +90,36 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Snippets</h2>
+									<p>A collection of smaller projects, demos, etc. organized by language/application</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/python.png" alt="" /></a>
+											<h3 class="major">Python Projects</h3>
+											<a href="#" class="special">Coming soon!</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/Excel.jpg" alt="" /></a>
+											<h3 class="major">Visual Basic for Applications</h3>
+											<p>Excel workbooks exemplifying data cleaning and statistical analysis, with a few macros & UDF's</p>
+											<a href="https://github.com/gbovett/DataManagement" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/sql.jpg" alt="" /></a>
+											<h3 class="major">temp</h3>
+											<p>temp</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<h3 class="major">temp</h3>
+											<p>temp</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
-									<ul class="actions">
+									<!--<ul class="actions">
 										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
+									</ul> -->
 								</div>
 							</section>
 
@@ -130,7 +129,9 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
+							<!--
 							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+						
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -149,21 +150,25 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</form>
+							</form> 
+						-->
 							<ul class="contact">
+								<!--
 								<li class="icon solid fa-home">
 									Untitled Inc<br />
 									1234 Somewhere Road Suite #2894<br />
 									Nashville, TN 00000-0000
 								</li>
+								
 								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								-->
+								<li class="icon solid fa-envelope"><a href="mailto:gbovett@gmail.com">gbovett@gmail.com</a></li>
+								<li class="icon brands fa-github"><a href="https://github.com/gbovett">github.com</a></li>
+								<li class="icon brands fa-linkedin"><a href="#">linkedin.com</a></li>
+								<!--<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>-->
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<!--<li>&copy; Untitled Inc. All rights reserved.</li>--><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
