--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/sudoku.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">temp</h2>
-										<p>temp</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Sudoku Solver Base</h2>
+										<p>Implementation of a sudoku solving algorithm and the beginnings of a simple GUI</p>
+										<a href="https://github.com/gbovett/SudokuSolver" class="special">File Download (redirects to github)</a>
 									</div>
 								</div>
 							</section>
@@ -106,9 +106,9 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/sql.jpg" alt="" /></a>
-											<h3 class="major">temp</h3>
-											<p>temp</p>
-											<a href="#" class="special">Learn more</a>
+											<h3 class="major">Structured Query Language Projects</h3>
+											<p>Sample databases demonstating data managemnt with SQL commands</p>
+											<a href="https://github.com/gbovett/DataManagement/tree/master/SQL" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
